--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,12 @@ authors = ["muhtasim1 <muhtasim@greentomatomedia.com>"]
 python = "^3.8"
 djangoadmin = "^2.2.8"
 djangorestframework = "^3.13.1"
+celery = "^5.2.7"
+redis = "^4.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+black = {version = "^22.3.0", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
