--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ djangoadmin = "^2.2.8"
 djangorestframework = "^3.13.1"
 celery = "^5.2.7"
 redis = "^4.3.1"
+flower = "^1.0.0"
+django-celery-beat = "^2.2.1"
+psycopg2-binary = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
