--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,27 @@ services:
     depends_on:
       - django
       - redis
+  celery-beat:
+    build: .
+    command:
+      [
+        "celery",
+        "-A",
+        "core",
+        "beat",
+        "-l",
+        "DEBUG",
+        "--scheduler",
+        "django_celery_beat.schedulers:DatabaseScheduler"
+      ]
+    volumes:
+      - .:/usr/src/app
+      - staticfiles:/static
+    environment:
+      STATIC_ROOT: "/static"
+    env_file:
+      - .env
+    restart: always
   flower:
     build: .
     container_name: flower
@@ -57,3 +78,4 @@ volumes:
   django-celery:
   redis:
   celery:
+  staticfiles:
