This commit adds vairous packages to convert this project in a complete from.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
-version: "3.8"
+version: "3.8rest_framework"
 
 services:
   django:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
+    container_name: django-celery
     volumes:
       - .:/usr/src/app/
     ports:
