--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ redis = "^4.3.1"
 flower = "^1.0.0"
 django-celery-beat = "^2.2.1"
 psycopg2-binary = "^2.9.3"
+django-debug-toolbar = "^3.7.0"
+django-rest-swagger = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
