--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ django-celery-beat = "^2.2.1"
 psycopg2-binary = "^2.9.3"
 django-debug-toolbar = "^3.7.0"
 django-rest-swagger = "^2.2.0"
+python-dotenv = "^0.21.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
